--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Belajar Git Remote</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis facere nesciunt fugit minima laborum repudiandae blanditiis ratione corporis consectetur quaerat, pariatur officia perspiciatis maxime labore omnis facilis, eius eos dolor!</p>
 </body>
 </html>
