menambahkan paragraf ke dua

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Belajar Git Remote</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis facere nesciunt fugit minima laborum repudiandae blanditiis ratione corporis consectetur quaerat, pariatur officia perspiciatis maxime labore omnis facilis, eius eos dolor!</p>
+    <p>paragraf ke dua</p>
 </body>
 </html>
